--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1>Filterer jQuery Plugin</h1>
-        <input id="Filterer" />
+        <input />
     </body>
 </html>
