--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Filterer jQuery Plugin</title>
-        <link rel="stylesheet" href="filterer.css" />
+        <link rel="stylesheet" href="jquery.filterer.css" />
         <script src="require.js" data-main="main"></script>
     </head>
     <body>
